Updated Irish translation.
2007-12-26  Seán de Búrca  <sdeburca@svn.gnome.org>

    * ga.po: Updated Irish translation.

svn path=/trunk/; revision=13550

--- a/po/ga.po
+++ b/po/ga.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus HEAD\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-12-26 12:02-0700\n"
-"PO-Revision-Date: 2007-12-26 12:02-0700\n"
+"POT-Creation-Date: 2007-12-26 12:53-0700\n"
+"PO-Revision-Date: 2007-12-26 12:53-0700\n"
 "Last-Translator: Seán de Búrca <leftmostcat@gmail.com>\n"
 "Language-Team: Irish <gaeilge-gnulinux@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -286,11 +286,11 @@ msgstr ""
 
 #: ../data/browser.xml.h:68
 msgid "_Emblems"
-msgstr "_Comharthanna"
+msgstr "_Suaitheantais"
 
 #: ../data/browser.xml.h:69
 msgid "_Patterns"
-msgstr ""
+msgstr "_Patrúin"
 
 #: ../data/nautilus.xml.in.h:1
 msgid "Saved search"
@@ -2227,7 +2227,7 @@ msgstr ""
 #: ../libnautilus-private/nautilus-global-preferences.c:122
 #: ../src/nautilus-file-management-properties.glade.h:63
 msgid "_Ask each time"
-msgstr ""
+msgstr "_Fiafraigh gach uair"
 
 #: ../libnautilus-private/nautilus-global-preferences.c:129
 msgid "Search for files by file name only"
@@ -2240,7 +2240,7 @@ msgstr ""
 #: ../libnautilus-private/nautilus-global-preferences.c:139
 #: ../src/file-manager/fm-icon-container.c:526
 msgid "Icon View"
-msgstr "Radharc na Dealbhanna"
+msgstr "Amharc Deilbhíní"
 
 #: ../libnautilus-private/nautilus-global-preferences.c:140
 #: ../src/file-manager/fm-list-view.c:1455
@@ -2249,7 +2249,7 @@ msgstr "Radharc Líosta"
 
 #: ../libnautilus-private/nautilus-global-preferences.c:144
 msgid "Manually"
-msgstr ""
+msgstr "De Láimh"
 
 #: ../libnautilus-private/nautilus-global-preferences.c:146
 msgid "By Name"
@@ -2265,11 +2265,11 @@ msgstr "le Saghas"
 
 #: ../libnautilus-private/nautilus-global-preferences.c:149
 msgid "By Modification Date"
-msgstr ""
+msgstr "De Réir Dháta Athraithe"
 
 #: ../libnautilus-private/nautilus-global-preferences.c:150
 msgid "By Emblems"
-msgstr ""
+msgstr "De Réir Suaitheantas"
 
 #: ../libnautilus-private/nautilus-global-preferences.c:154
 msgid "8"
@@ -2637,7 +2637,7 @@ msgstr[4] ""
 #: ../libnautilus-private/nautilus-progress-info.c:474
 #: ../libnautilus-private/nautilus-progress-info.c:492
 msgid "Preparing"
-msgstr ""
+msgstr "Á Ullmhú"
 
 #: ../libnautilus-private/nautilus-query.c:135
 #: ../libnautilus-private/nautilus-search-directory-file.c:166
@@ -2682,11 +2682,11 @@ msgstr ""
 
 #: ../nautilus-file-management-properties.desktop.in.in.h:1
 msgid "Change the behaviour and appearance of file manager windows"
-msgstr ""
+msgstr "Athraigh oibriú agus cuma fuinneoga bhainisteoir comhad"
 
 #: ../nautilus-file-management-properties.desktop.in.in.h:2
 msgid "File Management"
-msgstr "Bainisteoireacht Comhad"
+msgstr "Bainisteoireacht Chomhad"
 
 #: ../nautilus-folder-handler.desktop.in.in.h:1
 msgid "Open Folder"
@@ -2907,7 +2907,7 @@ msgstr "%s (%s)"
 #: ../src/file-manager/fm-directory-view.c:2116
 #, c-format
 msgid "%s, Free space: %s"
-msgstr ""
+msgstr "%s, Spás saor: %s"
 
 #. This is marked for translation in case a localizer
 #. * needs to change ", " to something else. The comma
@@ -3259,7 +3259,7 @@ msgstr ""
 #. name, stock id
 #: ../src/file-manager/fm-directory-view.c:6254
 msgid "Reset View to _Defaults"
-msgstr ""
+msgstr "Athshocraigh Amharc go _Réamshocruithe"
 
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6255
@@ -3679,7 +3679,7 @@ msgstr ""
 
 #: ../src/file-manager/fm-icon-view.c:144
 msgid "by Modification _Date"
-msgstr ""
+msgstr "de réir Dháta Athraithe"
 
 #: ../src/file-manager/fm-icon-view.c:145
 #: ../src/file-manager/fm-icon-view.c:1476
@@ -3783,7 +3783,7 @@ msgstr "De Réir _Cineáil"
 
 #: ../src/file-manager/fm-icon-view.c:1475
 msgid "By Modification _Date"
-msgstr ""
+msgstr "De Réir _Dháta Athraithe"
 
 #: ../src/file-manager/fm-icon-view.c:1479
 msgid "By _Emblems"
@@ -3835,7 +3835,7 @@ msgstr "Á luchtú..."
 #: ../src/file-manager/fm-list-view.c:2032
 #, c-format
 msgid "%s Visible Columns"
-msgstr ""
+msgstr "Colúin Infheicthe %s"
 
 #: ../src/file-manager/fm-list-view.c:2051
 msgid "Choose the order of information to appear in this folder."
@@ -3844,7 +3844,7 @@ msgstr ""
 #. name, stock id
 #: ../src/file-manager/fm-list-view.c:2093
 msgid "Visible _Columns..."
-msgstr ""
+msgstr "_Colúin Infheicthe..."
 
 #. label, accelerator
 #: ../src/file-manager/fm-list-view.c:2094
@@ -4123,7 +4123,7 @@ msgstr "Léigh agus scríobh"
 
 #: ../src/file-manager/fm-properties-window.c:3961
 msgid "Set _user ID"
-msgstr ""
+msgstr "Socraigh CA ú_sáideora"
 
 #: ../src/file-manager/fm-properties-window.c:3963
 msgid "Special flags:"
@@ -4131,11 +4131,11 @@ msgstr ""
 
 #: ../src/file-manager/fm-properties-window.c:3965
 msgid "Set gro_up ID"
-msgstr ""
+msgstr "Socraigh CA _grúpa"
 
 #: ../src/file-manager/fm-properties-window.c:3966
 msgid "_Sticky"
-msgstr ""
+msgstr "_Greamaitheach"
 
 #: ../src/file-manager/fm-properties-window.c:4046
 #: ../src/file-manager/fm-properties-window.c:4250
@@ -4411,27 +4411,27 @@ msgstr "Suíomh Saincheaptha"
 
 #: ../src/nautilus-connect-server-dialog.c:120
 msgid "SSH"
-msgstr ""
+msgstr "SSH"
 
 #: ../src/nautilus-connect-server-dialog.c:123
 msgid "Public FTP"
-msgstr ""
+msgstr "FTP Poiblí"
 
 #: ../src/nautilus-connect-server-dialog.c:125
 msgid "FTP (with login)"
-msgstr ""
+msgstr "FTP (le logáil isteach)"
 
 #: ../src/nautilus-connect-server-dialog.c:128
 msgid "Windows share"
-msgstr ""
+msgstr "Comhroinnt Windows"
 
 #: ../src/nautilus-connect-server-dialog.c:130
 msgid "WebDAV (HTTP)"
-msgstr ""
+msgstr "WebDAV (HTTP)"
 
 #: ../src/nautilus-connect-server-dialog.c:132
 msgid "Secure WebDAV (HTTPS)"
-msgstr ""
+msgstr "WebDAV Daingean (HTTPS)"
 
 #: ../src/nautilus-connect-server-dialog.c:200
 #, c-format
@@ -4635,7 +4635,7 @@ msgstr "<span weight=\"bold\">Amharc Réamhshocraithe</span>"
 
 #: ../src/nautilus-file-management-properties.glade.h:21
 msgid "<span weight=\"bold\">Executable Text Files</span>"
-msgstr ""
+msgstr "<span weight=\"bold\">Comhaid Téacs Inrite</span>"
 
 #: ../src/nautilus-file-management-properties.glade.h:22
 msgid "<span weight=\"bold\">Folders</span>"
@@ -4643,27 +4643,27 @@ msgstr "<span weight=\"bold\">Fillteáin</span>"
 
 #: ../src/nautilus-file-management-properties.glade.h:23
 msgid "<span weight=\"bold\">Icon Captions</span>"
-msgstr ""
+msgstr "<span weight=\"bold\">Foscríbhinní Deilbhíní</span>"
 
 #: ../src/nautilus-file-management-properties.glade.h:24
 msgid "<span weight=\"bold\">Icon View Defaults</span>"
-msgstr ""
+msgstr "<span weight=\"bold\">Réamhshocruithe Amharc Deilbhíní</span>"
 
 #: ../src/nautilus-file-management-properties.glade.h:25
 msgid "<span weight=\"bold\">List Columns</span>"
-msgstr ""
+msgstr "<span weight=\"bold\">Colúin Liosta</span>"
 
 #: ../src/nautilus-file-management-properties.glade.h:26
 msgid "<span weight=\"bold\">List View Defaults</span>"
-msgstr ""
+msgstr "<span weight=\"bold\">Réamhshocruithe Amharc Liosta</span>"
 
 #: ../src/nautilus-file-management-properties.glade.h:27
 msgid "<span weight=\"bold\">Other Previewable Files</span>"
-msgstr ""
+msgstr "<span weight=\"bold\">Comhaid Inréamhamharctha Eile</span>"
 
 #: ../src/nautilus-file-management-properties.glade.h:28
 msgid "<span weight=\"bold\">Sound Files</span>"
-msgstr ""
+msgstr "<span weight=\"bold\">Comhaid Fuaime</span>"
 
 #: ../src/nautilus-file-management-properties.glade.h:29
 msgid "<span weight=\"bold\">Text Files</span>"
@@ -4675,7 +4675,7 @@ msgstr "<span weight=\"bold\">Bruscar</span>"
 
 #: ../src/nautilus-file-management-properties.glade.h:31
 msgid "<span weight=\"bold\">Tree View Defaults</span>"
-msgstr ""
+msgstr "<span weight=\"bold\">Réamhshocruithe Amharc Crainn</span>"
 
 #: ../src/nautilus-file-management-properties.glade.h:32
 msgid ""
@@ -4689,11 +4689,11 @@ msgstr ""
 
 #: ../src/nautilus-file-management-properties.glade.h:35
 msgid "Always open in _browser windows"
-msgstr ""
+msgstr "Oscail i bhfuinneoga _brabhsála i gcónaí"
 
 #: ../src/nautilus-file-management-properties.glade.h:36
 msgid "Ask before _emptying the Trash or deleting files"
-msgstr ""
+msgstr "Fiafraigh roimh an Bruscar a fholmhú nó comhaid a scriosadh"
 
 #: ../src/nautilus-file-management-properties.glade.h:37
 msgid "Behavior"
@@ -4707,6 +4707,11 @@ msgid ""
 "By Modification Date\n"
 "By Emblems"
 msgstr ""
+"De Réir Ainm\n"
+"De Réir Méide\n"
+"De Réir Cineáil\n"
+"De Réir Dháta Athraithe\n"
+"De Réir Suaitheantas"
 
 #: ../src/nautilus-file-management-properties.glade.h:43
 msgid ""
@@ -4720,11 +4725,11 @@ msgstr ""
 
 #: ../src/nautilus-file-management-properties.glade.h:45
 msgid "Count _number of items:"
-msgstr ""
+msgstr "Comhair _líon míreanna:"
 
 #: ../src/nautilus-file-management-properties.glade.h:46
 msgid "Default _zoom level:"
-msgstr ""
+msgstr "Leibhéal _súmáil réamhshocraithe:"
 
 #: ../src/nautilus-file-management-properties.glade.h:47
 msgid "Display"
@@ -4732,23 +4737,23 @@ msgstr "Taispeáin"
 
 #: ../src/nautilus-file-management-properties.glade.h:48
 msgid "File Management Preferences"
-msgstr "Sainroghanna Bhainisteoireacht Comhad"
+msgstr "Sainroghanna Bhainisteoireacht Chomhad"
 
 #: ../src/nautilus-file-management-properties.glade.h:49
 msgid "I_nclude a Delete command that bypasses Trash"
-msgstr ""
+msgstr "Cuimsi_gh ordú Scrios a sheachthreorú Bruscar"
 
 #: ../src/nautilus-file-management-properties.glade.h:50
 msgid ""
 "Icon View\n"
 "List View"
 msgstr ""
-"Amharcán Deilbhín\n"
+"Amharcán Deilbhíní\n"
 "Amharcán Liosta"
 
 #: ../src/nautilus-file-management-properties.glade.h:52
 msgid "List Columns"
-msgstr ""
+msgstr "Colúin Liosta"
 
 #: ../src/nautilus-file-management-properties.glade.h:53
 msgid "Preview"
@@ -4756,31 +4761,31 @@ msgstr "Reámhamharc"
 
 #: ../src/nautilus-file-management-properties.glade.h:54
 msgid "Preview _sound files:"
-msgstr ""
+msgstr "Réamhamharc comhaid _fuaime:"
 
 #: ../src/nautilus-file-management-properties.glade.h:55
 msgid "Show _only folders"
-msgstr ""
+msgstr "Taispeáin fillteáin _amháin"
 
 #: ../src/nautilus-file-management-properties.glade.h:56
 msgid "Show _thumbnails:"
-msgstr ""
+msgstr "Taispeáin _mionsamhlacha:"
 
 #: ../src/nautilus-file-management-properties.glade.h:57
 msgid "Show hidden and _backup files"
-msgstr ""
+msgstr "Taispeáin comhaid folaithe agus _cúltaca"
 
 #: ../src/nautilus-file-management-properties.glade.h:58
 msgid "Show te_xt in icons:"
-msgstr ""
+msgstr "Taispeáin _téacs i ndeilbhíní:"
 
 #: ../src/nautilus-file-management-properties.glade.h:59
 msgid "Sort _folders before files"
-msgstr ""
+msgstr "Sórtáil _fillteáin roimh chomhaid"
 
 #: ../src/nautilus-file-management-properties.glade.h:60
 msgid "View _new folders using:"
-msgstr ""
+msgstr "Amharc ar fillteáin _nua le:"
 
 #: ../src/nautilus-file-management-properties.glade.h:61
 msgid "Views"
@@ -4788,15 +4793,15 @@ msgstr "Amharcanna"
 
 #: ../src/nautilus-file-management-properties.glade.h:62
 msgid "_Arrange items:"
-msgstr ""
+msgstr "Có_irigh míreanna:"
 
 #: ../src/nautilus-file-management-properties.glade.h:64
 msgid "_Default zoom level:"
-msgstr ""
+msgstr "Leibhéal súmáil réamhshocraithe:"
 
 #: ../src/nautilus-file-management-properties.glade.h:65
 msgid "_Double click to open items"
-msgstr ""
+msgstr "_Déchliceáil chun míreanna a oscailt"
 
 #: ../src/nautilus-file-management-properties.glade.h:66
 msgid "_Format:"
@@ -4804,15 +4809,15 @@ msgstr "_Formáid:"
 
 #: ../src/nautilus-file-management-properties.glade.h:67
 msgid "_Only for files smaller than:"
-msgstr ""
+msgstr "_Amháin le comhaid níos ísle ná:"
 
 #: ../src/nautilus-file-management-properties.glade.h:68
 msgid "_Run executable text files when they are opened"
-msgstr ""
+msgstr "_Rith comhaid téacs inrite nuair a bhfuil siad oscailte"
 
 #: ../src/nautilus-file-management-properties.glade.h:69
 msgid "_Single click to open items"
-msgstr ""
+msgstr "_Aonchliceáil chun míreanna a oscailt"
 
 #: ../src/nautilus-file-management-properties.glade.h:70
 msgid "_Text beside icons"
@@ -4820,11 +4825,11 @@ msgstr "_Téacs in aice le deilbhíní"
 
 #: ../src/nautilus-file-management-properties.glade.h:71
 msgid "_Use compact layout"
-msgstr ""
+msgstr "Ú_sáid dlúthleagan amach"
 
 #: ../src/nautilus-file-management-properties.glade.h:72
 msgid "_View executable text files when they are opened"
-msgstr ""
+msgstr "A_mharc comhaid téacs inrite nuair a bhfuil siad oscailte"
 
 #: ../src/nautilus-first-time-druid.c:40
 msgid ""
@@ -5201,7 +5206,7 @@ msgstr ""
 #. name, stock id
 #: ../src/nautilus-navigation-window-menus.c:503
 msgid "_Main Toolbar"
-msgstr ""
+msgstr "_Príomhbharra Uirlisí"
 
 #. label, accelerator
 #: ../src/nautilus-navigation-window-menus.c:504
@@ -5344,7 +5349,7 @@ msgstr "Taispeáin Áiteanna"
 #. set the title and standard close accelerator
 #: ../src/nautilus-property-browser.c:279
 msgid "Backgrounds and Emblems"
-msgstr ""
+msgstr "Cúlraí agus Suaitheantais"
 
 #: ../src/nautilus-property-browser.c:388
 msgid "_Remove..."
@@ -5352,7 +5357,7 @@ msgstr "_Bain..."
 
 #: ../src/nautilus-property-browser.c:408
 msgid "_Add new..."
-msgstr "_Cuir nua leis..."
+msgstr "Cuir nua _leis..."
 
 #: ../src/nautilus-property-browser.c:976
 #, c-format
@@ -5464,7 +5469,7 @@ msgstr ""
 
 #: ../src/nautilus-property-browser.c:2156
 msgid "Select a Category:"
-msgstr ""
+msgstr "Roghnaigh Catagóir:"
 
 #: ../src/nautilus-property-browser.c:2165
 msgid "C_ancel Remove"
@@ -5472,15 +5477,15 @@ msgstr "Ce_alaigh Baint"
 
 #: ../src/nautilus-property-browser.c:2171
 msgid "_Add a New Pattern..."
-msgstr "_Cuir Patrún Nua Leis..."
+msgstr "Cuir Patrún Nua _Leis..."
 
 #: ../src/nautilus-property-browser.c:2174
 msgid "_Add a New Color..."
-msgstr "_Cuir Dath Nua Leis..."
+msgstr "Cuir Dath Nua _Leis..."
 
 #: ../src/nautilus-property-browser.c:2177
 msgid "_Add a New Emblem..."
-msgstr ""
+msgstr "Cuir Suaitheantas Nua _Leis..."
 
 #: ../src/nautilus-property-browser.c:2200
 msgid "Click on a pattern to remove it"
@@ -5767,8 +5772,6 @@ msgid ""
 "Nautilus is a graphical shell for GNOME that makes it easy to manage your "
 "files and the rest of your system."
 msgstr ""
-"Is Nautilus blaosc ghrafach a dhéanann éasca bainisteoireacht chomhad agus "
-"na cuid eile do chórais."
 
 #: ../src/nautilus-window-menus.c:456
 msgid "Copyright © 1999-2007 The Nautilus authors"
@@ -5821,7 +5824,7 @@ msgstr "Dún an fillteán seo"
 
 #: ../src/nautilus-window-menus.c:606
 msgid "_Backgrounds and Emblems..."
-msgstr "Cúlraí agus S_uaitheantais..."
+msgstr "Cúlraí agus Sua_itheantais..."
 
 #: ../src/nautilus-window-menus.c:607
 msgid ""
