--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2007-12-27  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-dnd.c:
+        (nautilus_drag_default_drop_action_for_icons):
+	Default dnd of desktop icons to move. (#504824)
+	Based on patch by Cosimo Cecchi
+
 2007-12-20  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
