Updated Occitan translation
svn path=/trunk/; revision=13553

--- a/po/oc.po
+++ b/po/oc.po
@@ -5234,7 +5234,7 @@ msgstr "_Valor de color :"
 #: ../src/nautilus-property-browser.c:1187
 #, c-format
 msgid "Sorry, but \"%s\" is not a valid file name."
-msgstr "Desconsolat mas \"%\"s es pas un nom de fichièr valid."
+msgstr "Desconsolat mas \"%s\" es pas un nom de fichièr valid."
 
 #: ../src/nautilus-property-browser.c:1188
 #: ../src/nautilus-window-manage-views.c:1594
