Update to use extensions-2.0 dir.
2007-12-24  Brian Pepple  <bpepple@fedoraproject.org>

	* libnautilus-extension/libnautilus-extension.pc.in (extensiondir):
	* libnautilus-extension/libnautilus-extension-uninstalled.pc.in (extensiondir):
	Update to use extensions-2.0 dir.


svn path=/trunk/; revision=13554

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-12-24  Brian Pepple  <bpepple@fedoraproject.org>
+
+	* libnautilus-extension/libnautilus-extension.pc.in (extensiondir):
+	* libnautilus-extension/libnautilus-extension-uninstalled.pc.in (extensiondir):
+	Update to use extensions-2.0 dir.
+
 2007-12-27  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-dnd.c:
