--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-01-03  Cosimo Cecchi  <cosimoc@svn.gnome.org>
+
+	* libnautilus-private/apps_nautilus_preferences.schemas.in:
+	Fix a typo.
+
 2007-12-24  Brian Pepple  <bpepple@fedoraproject.org>
 
 	* libnautilus-extension/libnautilus-extension.pc.in (extensiondir):
