Remove unnecessary delete_if_all_already_in_trash boolean.
2008-01-04  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-operations.c:
        (delete_job):
	Remove unnecessary delete_if_all_already_in_trash boolean.


svn path=/trunk/; revision=13557

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-01-04  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-file-operations.c:
+        (delete_job):
+	Remove unnecessary delete_if_all_already_in_trash boolean.
+	
 2008-01-03  Cosimo Cecchi  <cosimoc@svn.gnome.org>
 
 	* libnautilus-private/apps_nautilus_preferences.schemas.in:
