--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-01-04  Alexander Larsson  <alexl@redhat.com>
+
+        * src/nautilus-application.c:
+        (initialize_kde_trash_hack):
+	Handle the kde trash file on the desktop for newer kde versions
+
 2007-12-05  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-thumbnails.c:
