Update to new gio API
2008-01-07  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-monitor.c:
        * libnautilus-private/nautilus-trash-monitor.c:
	Update to new gio API


svn path=/trunk/; revision=13567

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-01-07  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-monitor.c:
+        * libnautilus-private/nautilus-trash-monitor.c:
+	Update to new gio API
+
 2008-01-04  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-extension/libnautilus-extension.pc.in:
