--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-01-08  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-thumbnails.c (get_file_mtime):
+	Fix memleak.
+
 2008-01-07  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-monitor.c:
