--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-01-08  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Bump glib req to 2.15.1
+
+2008-01-08  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-thumbnails.c (get_file_mtime):
 	Fix memleak.
 
