Implement some missing mount/unmount functionallity. Patch from Tomas
2008-01-08  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-desktop-icon-file.c:
        * libnautilus-private/nautilus-file-operations.c:
        * libnautilus-private/nautilus-vfs-file.c:
	Implement some missing mount/unmount functionallity.
	Patch from Tomas Bzatek <tbzatek@redhat.com>


svn path=/trunk/; revision=13571

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2008-01-08  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/nautilus-desktop-icon-file.c:
+        * libnautilus-private/nautilus-file-operations.c:
+        * libnautilus-private/nautilus-vfs-file.c:
+	Implement some missing mount/unmount functionallity.
+	Patch from Tomas Bzatek <tbzatek@redhat.com>
+
+2008-01-08  Alexander Larsson  <alexl@redhat.com>
+
 	* configure.in:
 	Bump glib req to 2.15.1
 
