Update for release
2008-01-08  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release



svn path=/trunk/; revision=13573

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+Major changes in 2.21.2 are:
+* Update pkg-config files with new extensions dir
+* Add some gio features to extension API
+* Handle dnd of desktop icons
+* Update to latest gvfs/gio API
+* Implement some missing unmount/eject operations
+
 Major changes in 2.21.1 are:
 * Totally replaced gnome-vfs use with gio
 * New implementation of file operations like copy/move with
