--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-01-08  Alexander Larsson  <alexl@redhat.com>
 
+	* NEWS:
+	Update for release
+
+2008-01-08  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-desktop-icon-file.c:
         * libnautilus-private/nautilus-file.[ch]:
         * libnautilus-private/nautilus-vfs-file.c:
@@ -83,7 +88,7 @@
 	* configure.in:
 	Post release version bump
 
-=== nautilus 2.20.1 ===
+=== nautilus 2.21.1 ===
 
 2007-12-20  Alexander Larsson  <alexl@redhat.com>
 
