Post release version bump
2008-01-08  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post release version bump

=== nautilus 2.21.2 ===


svn path=/trunk/; revision=13576

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2008-01-08  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Post release version bump
+
+=== nautilus 2.21.2 ===
+
+2008-01-08  Alexander Larsson  <alexl@redhat.com>
+
 	* NEWS:
 	Update for release
 
