Add the removed connect to server files to skip instead
2008-01-09  Alexander Larsson  <alexl@redhat.com>

        * POTFILES.skip:
	Add the removed connect to server files
	to skip instead


svn path=/trunk/; revision=13577

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-01-09  Alexander Larsson  <alexl@redhat.com>
+
+        * src/Makefile.am:
+	EXTRA_DIST the currently not built
+	connect to server dialogs.
+
 2008-01-08  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
