--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2008-01-09  Alexander Larsson  <alexl@redhat.com>
+
+        * POTFILES.skip:
+	Add the removed connect to server files
+	to skip instead
+
 === nautilus 2.21.2 ===
 
 2008-01-07  Funda Wang  <fundawang@linux.net.cn>
