--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,12 @@
 2008-01-09  A. Walton  <awalton@svn.gnome.org>
 
 	* libnautilus-private/nautilus-file-operations.c:
+	(verify_destination):
+	Non-strdup()'d string potentially free()'d.
+
+2008-01-09  A. Walton  <awalton@svn.gnome.org>
+
+	* libnautilus-private/nautilus-file-operations.c:
 	(move_file_prepare):
 	Remove bad g_error_free()'s causing crashes while 
 	merging files.
