Fix assertion crash on cancel.
2008-01-10  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-mime-actions.c:
        (cancel_activate_callback):
	Fix assertion crash on cancel.


svn path=/trunk/; revision=13582

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-01-10  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-mime-actions.c:
+        (cancel_activate_callback):
+	Fix assertion crash on cancel.
+
 2008-01-09  A. Walton  <awalton@svn.gnome.org>
 
 	* libnautilus-private/nautilus-file-operations.c:
