--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2008-01-10  Luca Ferretti  <elle.uca@libero.it>
 
+	* data/icons/16x16/apps/Makefile.am:
+	* data/icons/22x22/apps/Makefile.am:
+	* data/icons/24x24/apps/Makefile.am:
+	* data/icons/32x32/apps/Makefile.am:
+	* data/icons/scalable/apps/Makefile.am:
+	Run gtk-update-icon-cache one one when exiting from
+	icons directory. Not needed to repeat it 5 times.
+
+2008-01-10  Luca Ferretti  <elle.uca@libero.it>
+
 	* configure.in:
 	* data/Makefile.am:
 	* data/icons/*:
