New Tango icons from Ulisse Perusin (see bug #374722).
2008-01-10  Luca Ferretti  <elle.uca@libero.it>

	* icons/colors.png:
	* icons/backgrounds.png:
	* icons/emblems.png:
	New Tango icons from Ulisse Perusin (see bug #374722).


svn path=/trunk/; revision=13585

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2008-01-10  Luca Ferretti  <elle.uca@libero.it>
 
+	* icons/colors.png:
+	* icons/backgrounds.png:
+	* icons/emblems.png:
+	New Tango icons from Ulisse Perusin (see bug #374722).
+
+2008-01-10  Luca Ferretti  <elle.uca@libero.it>
+
 	* data/icons/16x16/apps/Makefile.am:
 	* data/icons/22x22/apps/Makefile.am:
 	* data/icons/24x24/apps/Makefile.am:
