Use nautilus_file_can_delete() to control sensitivity of delete menu item.
2008-01-10  Alexander Larsson  <alexl@redhat.com>

        * src/file-manager/fm-directory-view.c:
	Use nautilus_file_can_delete() to control sensitivity
	of delete menu item.


svn path=/trunk/; revision=13586

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-01-10  Alexander Larsson  <alexl@redhat.com>
+
+        * src/file-manager/fm-directory-view.c:
+	Use nautilus_file_can_delete() to control sensitivity
+	of delete menu item.
+
 2008-01-10  Luca Ferretti  <elle.uca@libero.it>
 
 	* icons/colors.png:
