--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-10  Gintautas Miliauskas  <gintas@akl.lt>
+
+	* lt.po: Updated Lithuanian translation.
+
 2008-01-10  Luca Ferretti  <elle.uca@libero.it>
 
 	* it.po: Updated Italian translation.
