--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-11  Changwoo Ryu  <cwryu@debian.org>
+
+	* ko.po: Updated Korean translation by Namhyung Kim.
+
 2008-01-10  Gintautas Miliauskas  <gintas@akl.lt>
 
 	* lt.po: Updated Lithuanian translation.
