--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-14  Priit Laes  <plaes at svn dot gnome dot org>
+
+	* et.po: Translation updated by Ivar Smolin
+
 2008-01-11  Changwoo Ryu  <cwryu@debian.org>
 
 	* ko.po: Updated Korean translation by Namhyung Kim.
