--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,16 @@
 2008-01-14  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Require glib 2.15.2
+
+        * libnautilus-private/nautilus-file-utilities.c:
+        * libnautilus-private/nautilus-monitor.c:
+        * libnautilus-private/nautilus-trash-monitor.c:
+        * src/nautilus-bookmark-list.c:
+	Update to new gio API.
+
+2008-01-14  Alexander Larsson  <alexl@redhat.com>
+
         * src/file-manager/fm-directory-view.c:
         (search_in_menu_items):
         (extension_action_callback):
