--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,17 @@
 2008-01-14  Alexander Larsson  <alexl@redhat.com>
 
+        * src/nautilus-application.c:
+	Correct includes
+
+	* NEWS:
+	Update for release
+
+	* configure.in:
+	Update version to 2.21.5
+	Require eel 2.21.5
+	
+2008-01-14  Alexander Larsson  <alexl@redhat.com>
+
 	* configure.in:
 	Require glib 2.15.2
 
