--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+Major changes in 2.21.5 are:
+* Add autorun/automount feature
+* Better handling of sensitivity of delete menu items
+* Better handling of mount/unmount/eject in many places
+* Fix for extensions with submenus
+* Fix crashes
+* Updated some icons to the Tango look
+* Fix some portability issues
+
 Major changes in 2.21.2 are:
 * Update pkg-config files with new extensions dir
 * Add some gio features to extension API
