--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-01-14  Alexander Larsson  <alexl@redhat.com>
+
+        * POTFILES.in:
+	Add nautilus-autorun.c
+
 2008-01-14  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* nb.po: Updated Norwegian bokmål translation.
