Post release version bump
svn path=/trunk/; revision=13600

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2008-01-14  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Post release version bump
+
+=== nautilus 2.21.5 ===
+
+2008-01-14  Alexander Larsson  <alexl@redhat.com>
+
         * src/nautilus-application.c:
 	Correct includes
 
