--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-14  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
+
+	* es.po: Updated Spanish translation
+
 === nautilus 2.21.5 ===
 
 2008-01-14  Alexander Larsson  <alexl@redhat.com>
