Honor mtime specified in thumbnail (#504833)
2008-01-15  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-directory-async.c:
        * libnautilus-private/nautilus-file-private.h:
        * libnautilus-private/nautilus-file.c:
	Honor mtime specified in thumbnail (#504833)



svn path=/trunk/; revision=13606

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-01-15  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-directory-async.c:
+        * libnautilus-private/nautilus-file-private.h:
+        * libnautilus-private/nautilus-file.c:
+	Honor mtime specified in thumbnail (#504833)
+
 2008-01-14  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
