--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-01-15  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/nautilus-mime-application-chooser.c:
+        (nautilus_mime_application_chooser_finalize):
+	Disconnect mime changed handler
+
+2008-01-15  Alexander Larsson  <alexl@redhat.com>
+
         * src/nautilus-file-management-properties.c:
         (nautilus_file_management_properties_dialog_response_cb):
 	Don't crash when exiting separate properties app. (#505687)
