Selection lists are GFiles now, not uris (#505944)
2008-01-15  Alexander Larsson  <alexl@redhat.com>

        * src/file-manager/fm-directory-view.c:
	Selection lists are GFiles now, not uris (#505944)


svn path=/trunk/; revision=13609

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-01-15  Alexander Larsson  <alexl@redhat.com>
 
+        * src/file-manager/fm-directory-view.c:
+	Selection lists are GFiles now, not uris (#505944)
+
+2008-01-15  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-mime-application-chooser.c:
         (nautilus_mime_application_chooser_finalize):
 	Disconnect mime changed handler
