Updated Telugu translation done by Krishna Babu K <kkrothap@redhat.com>.
2008-01-16  Sunil Mohan Adapa  <sunil@atc.tcs.com>

        * te.po: Updated Telugu translation done by
        Krishna Babu K <kkrothap@redhat.com>.


svn path=/trunk/; revision=13613

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-01-16  Sunil Mohan Adapa  <sunil@atc.tcs.com>
+
+	* te.po: Updated Telugu translation done by 
+	Krishna Babu K <kkrothap@redhat.com>.
+
 2008-01-15  Luca Ferretti  <elle.uca@libero.it>
 
 	* it.po: Updated Italian translation.
